--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -5,13 +5,16 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ current_site.name }}{% endblock %}</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="{{ STATIC_URL}}css/style.css" type="text/css" media="screen">    
+    <link rel="stylesheet" href="{{ STATIC_URL}}css/style.css" type="text/css" media="screen">
     <link rel="alternate" type="application/atom+xml" title="Latest status updates." href="{% url 'feed' %}">
+    <link href="//mozorg.cdn.mozilla.net/media/css/tabzilla-min.css" rel="stylesheet" />
   </head>
   <body>
+    <a href="/en-US/" id="tabzilla">mozilla</a>
     <div id="wrapper">
       <div id="header">
         <img id="logo" src="{{ STATIC_URL }}images/logo.png" alt="Logo">
+        <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}images/favicon.ico" />
         <h1 id="title"><a href="/">{{ current_site.name }}</a></h1>
       </div>
       <div id="content">
@@ -29,6 +32,7 @@
       </ul>
     </div>
     {% block js %}
+    <script src="//mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
     {% endblock %}
   </body>
 </html>
