--- a/board/templates/board/index.html
+++ b/board/templates/board/index.html
@@ -12,9 +12,6 @@
       <tr>
         <th>Service</th>
         <th class="today">Current</th>
-        {% for day in past %}
-          <th class="date">{{ day|date:"N d" }}</th>
-        {% endfor %}
       </tr>
     </thead>
 
@@ -23,29 +20,23 @@
       <tr>
         <td><a href="{{ service.get_absolute_url }}{{ service.events.latest.start|date:"/Y/m/d" }}">{{ service.name }}</a></td>
         <td class="status highlight">
-          <a href="{{ service.get_absolute_url }}{{ service.events.latest.start|date:"/Y/m/d" }}">
-            {% with service.events.latest.status as latest_status %}
-            {% if latest_status %}
-              <img src="{{ STATIC_URL }}images/status/{{ latest_status.image }}.png" alt="{{ latest_status }} "/>
-            {% else %}
-              <img src="{{ STATIC_URL }}images/status/{{ default.image }}.png" alt="{{ default.name }} "/>
-            {% endif %}
-            {% endwith %}
-          </a>
+          <!-- <a href="{{ service.get_absolute_url }}{{ service.events.latest.start|date:"/Y/m/d" }}"> -->
+          {% with service.events.latest.status as latest_status %}
+          {% if latest_status %}
+          <font color="{{ latest_status.color }}">{{ latest_status.description }}</font>
+          <!-- <img src="{{ STATIC_URL }}images/status/{{ latest_status.image }}.png" alt="{{ latest_status }} "/> -->
+          {% else %}
+          <font color="{{ default.color }}">{{ default.description }}</font>
+          <!-- <img src="{{ STATIC_URL }}images/status/{{ default.image }}.png" alt="{{ default.name }} "/> -->
+          {% endif %}
+          {% endwith %}
+          <!-- </a> -->
         </td>
-
-        {% for status in service.last_five_days %}
-        <td class="status">
-          <a href="{{ service.get_absolute_url }}/{{ status.day|date:"Y/m/d" }}">
-            <img src="{{ STATIC_URL }}images/status/{{ status.image }}.png" alt="{{ status.image }}">
-          </a>
-        </td>
-        {% endfor %}
       </tr>
-    {% endfor %}              
+    {% endfor %}
     </tbody>
   </table>
 {% endfor %}
-{% include "board/_legend.html" %}
+
 </div>
 {% endblock %}
