Add link to bugzilla.

--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -33,6 +33,9 @@
         {% block content %}
         {% endblock %}
       </div>
+      <div align='center'>
+      <a href="{{ bugzilla_url }}" target=_blank">Have a problem? Report it</a>
+      </div>
       <div id="push"></div>
     </div>
     <div id="footer">
