--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -12,6 +12,7 @@
   <body>
         <header id="masthead">
           <a href="/en-US/" id="tabzilla">mozilla</a>
+          <!--
           <nav id="nav-main" role="navigation">
               <ul>
                   <li><a href="//mozilla.org/mission/">FIXME</a></li>
@@ -19,6 +20,7 @@
                   <li><a href="//mozilla.org/products/">FIXME</a></li>
                   <li><a href="//mozilla.org/contribute/">FIXME</a></li>
               </ul>
+            -->
           </nav>
         </header>
 
@@ -28,7 +30,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}images/favicon.ico" />
         <h1 id="title"><a href="/">{{ current_site.name }}</a></h1>
       </div>
-      <div style="border: 3px solid green; border-radius: 2px;" id="FIXME_DESCRIPTION_BLURB">DEATH FROM ABOVE</div>
+      <!-- <div style="border: 3px solid green; border-radius: 2px;" id="FIXME_DESCRIPTION_BLURB">DEATH FROM ABOVE</div> -->
       <div id="content">
         {% block content %}
         {% endblock %}
