--- a/board/templates/board/index.html
+++ b/board/templates/board/index.html
@@ -3,9 +3,9 @@
 {% regroup services|dictsort:"category.name" by category as category_list %}
 <div id="webservices" class="frame">
   {% for category in category_list %}
-  <h2 class="category">{{ category.grouper.name }}</h2>
+  <h2 class="category"><!-- {{ category.grouper.name }}--></h2>
   <div class="category-desc">
-    {{ category.grouper.description|safe }}
+      <!--{{ category.grouper.description|safe }} -->
   </div>
   <table id="service-list">
     <thead>
