Add service description as a tooltip.

--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -19,6 +19,7 @@
 
         {% block css %}
         <link rel="stylesheet" type="text/css" href="{% static 'css/sandstone/sandstone-resp.css' %}" media="screen" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}" media="screen" />
         {% endblock %}
         {% block site_css %}{% endblock %}
 
