--- a/board/static/css/custom.css
+++ b/board/static/css/custom.css
@@ -7,20 +7,20 @@
     width: 1.8ex;
     height: 1.8ex;
     font-size: 1.2ex;
-    color: #4090C4;
+    color: #67A7D0;
     line-height: 1.8ex;
     border-radius: 1.2ex;
     margin-right: 4px;
     padding: 1px;
     border: 3px solid;
-    border-color: #4090C4;
+    border-color: #67A7D0;
     text-decoration: none;
 }
 
 .circlequestion:hover:before
 {
     color: white;
-    background: #4090C4;
+    background: #67A7D0;
     border-color: white;
     text-decoration: none;
 }
