--- a/board/templates/board/index.html
+++ b/board/templates/board/index.html
@@ -18,7 +18,7 @@
     <tbody id="services-body">
     {% for service in category.list %}
     <tr>
-      <td><a href="{{ service.get_absolute_url }}">{{ service.name }}</a>&nbsp;<span class='circlequestion' title='{{ service.long_description }}'></td>
+      <td><a href="{{ service.get_absolute_url }}">{{ service.name }}</a>&nbsp;<span class='circlequestion' title='{{ service.long_description }}'></span></td>
         <td class="status highlight">
           {% with service.events.latest.status as latest_status %}
           {% if latest_status %}
@@ -36,7 +36,7 @@
     </table>
     {% endfor %}
 
-    <h2><strong>Recent Events</h2></strong>
+    <h2>Recent Events</h2>
     {% regroup events by service as events_list %}
     {% for service in events_list %}
     <h4>{{ service.grouper }}</h4>
@@ -44,8 +44,8 @@
     <p>{{ item.start|date:"N j, fA T" }}: {{ item.message|safe }}</p>
     {% endfor %}
     {% empty %}
-    <p>No events found </p>
+    <p>No events found</p>
     {% endfor %}
-
   </div>
-  {% endblock %}
+</div>
+{% endblock %}
